# anchor_starter

./: Anchor.toml
programs/starter/: Cargo.toml
programs/starter/src/: lib.rs
tests/: starter.ts
